force-app/main/default/objects/Invoice__c/fields/Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited__c</fullName>
    <label>Amount Credited (Expiring on Aug 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>