force-app/main/default/objects/Invoice__c/fields/Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invoiced__c</fullName>
    <label>Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>