force-app/main/default/objects/Invoice__c/fields/amt_credited__c.field-meta.xml
<CustomField>
    <fullName>amt_credited__c</fullName>
    <label>Amount Credited (New)</label>
    <summarizedField>NS_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>NS_Payment__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>NS_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>