force-app/main/default/objects/Invoice__c/fields/Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Sent__c</fullName>
    <description>SC-000035</description>
    <label>Date Invoice Sent</label>
    <type>Date</type>
</CustomField>