force-app/main/default/objects/Invoice__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <label>Date Paid (Expiring on Aug 2)</label>
    <type>Date</type>
</CustomField>