force-app/main/default/objects/Invoice__c/fields/Latest_NS_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NS_Rev_Rec_Date__c</fullName>
    <inlineHelpText>This field contains the latest Revenue Recognition Date from all attached NetSuite Line Items.</inlineHelpText>
    <label>NS Rev Rec End Date (Expiring Aug 2)</label>
    <type>Date</type>
</CustomField>