force-app/main/default/objects/Invoice__c/fields/Latest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payment_Date__c</fullName>
    <label>Latest Payment Date#</label>
    <summarizedField>NS_Payment__c.Transaction_Date__c</summarizedField>
    <summaryFilterItems>
        <field>NS_Payment__c.Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NS_Payment__c.Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>NS_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>