force-app/main/default/objects/Invoice__c/fields/Most_Recent_Memo__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Memo__c</fullName>
    <description>SC-000046</description>
    <label>Most Recent Memo</label>
    <summarizedField>Invoice_User_Note__c.Date__c</summarizedField>
    <summaryForeignKey>Invoice_User_Note__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>