force-app/main/default/objects/Invoice__c/fields/NetSuite_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_Status__c</fullName>
    <label>NetSuite Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>