force-app/main/default/objects/Invoice__c/fields/NS_Dollar_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>NS_Dollar_Amount_Paid__c</fullName>
    <label>Amount Paid (Expiring on Aug 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>