force-app/main/default/objects/Invoice__c/fields/NS_Rev_Rec_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Rev_Rec_Start_Date__c</fullName>
    <label>NS Rev Rec Start Date (Expiring Aug 2)</label>
    <type>Date</type>
</CustomField>