force-app/main/default/objects/Invoice__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <label>Outstanding Balance(Expiring on Aug 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>