force-app/main/default/objects/Invoice__c/fields/Outstanding_Bln__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Bln__c</fullName>
    <formula>IF(
    Amount_Invoiced__c  -  amt_credited__c -  Amt_Paid__c &lt; 1, 
    0,
    Amount_Invoiced__c  -  amt_credited__c -  Amt_Paid__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>