force-app/main/default/objects/Invoice__c/fields/Product_Customer__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>