force-app/main/default/objects/Invoice__c/fields/Related_OSA__c.field-meta.xml
<CustomField>
    <fullName>Related_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related OSA</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>