force-app/main/default/objects/Invoice__c/fields/Related_renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>