force-app/main/default/objects/Invoice__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>New license sale</fullName>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>DTE Usage</fullName>
            </value>
            <value>
                <fullName>RollCall Usage</fullName>
            </value>
            <value>
                <fullName>Services Agreement–T&amp;M</fullName>
            </value>
            <value>
                <fullName>Services Agreement-Upgrade</fullName>
            </value>
            <value>
                <fullName>Comprehensive Mobile</fullName>
            </value>
            <value>
                <fullName>Evaulation Program</fullName>
            </value>
            <value>
                <fullName>DTE Axiom Upgrade</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Additional DTE Licenses</fullName>
            </value>
            <value>
                <fullName>Renewal-Exception</fullName>
            </value>
            <value>
                <fullName>New Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>