force-app/main/default/objects/Invoice__c/fields/Salesforce_User_Notes__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Notes__c</fullName>
    <label>Salesforce User Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>