force-app/main/default/objects/Invoice__c/fields/Salesforce_User_Notes_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Notes_Last_Modified_Date__c</fullName>
    <label>Salesforce User Notes Last Modified Date</label>
    <type>Date</type>
</CustomField>