force-app/main/default/objects/Invoice__c/fields/Salesforce_User_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Status__c</fullName>
    <label>Salesforce User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will be paid at full amount</fullName>
            </value>
            <value>
                <fullName>Will be paid but with some discount</fullName>
            </value>
            <value>
                <fullName>Customer pushing back on majority of invoice</fullName>
            </value>
            <value>
                <fullName>Will need to be written off</fullName>
            </value>
            <value>
                <fullName>Other - comment in Notes</fullName>
            </value>
            <value>
                <fullName>Need AR comments</fullName>
            </value>
            <value>
                <fullName>Currently engaging with Client</fullName>
            </value>
            <value>
                <fullName>Customer not responding</fullName>
            </value>
            <value>
                <fullName>No Status Yet</fullName>
                <isActive>false</isActive>
                <label>No Status Yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>