force-app/main/default/objects/Invoice__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Number</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>